2010-12-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_check.sh:
	  Fix simple typo so it reports number of failed tests.

2009-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* TODO:
	  Add notes about failing test.
	* test_input/test71.py:
	  comment the lines that really should be unreacheable.
	  They're not the lines the pre-2.5 results actually hit.

2009-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/OP.py:
	  Document.

2009-10-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	* pychecker/utils.py:
	  From 2.4 to 2.5, the name for generator code objects changed.
	  In 2.4, lib/compile.c has the function compile_generator_expression
	  with:
	          c->c_name = "<generator expression>";

	  In 2.5, lib/compile.c has the function compiler_genexp with:
	          if (!name) {
		                  name = PyString_FromString("<genexpr>");
	  So adapt to this change by adding another utils string, and
	  comparing against it in _LODE_CONST.
	  Fixes test 103 on 2.5/2.6

2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_check.sh:
	  Mangle output from warnings for system libraries so that we replace
	  the system path with [system path] much like pychecker does.
	  Allows us to consistently check against expected output without
	  relying on where python is installed.
	* test_expected/test88-2.4:
	  Change to use [system path].  Fixes test 88 for python 2.4

2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* test_expected/test87-2.5:
	  Since Python 2.5, disassembly is able to pinpoint the exact line
	  number of multiline statements.  So update line numbers to the
	  correct source line.
	  Fixes test 87 for 2.5 and later.

2009-09-30  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pychecker/CodeChecks.py:
	  More documentation.
